tests/ui/missing_ref.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> tests/ui/missing_ref.rs:7:11
  |
L |     world.query::<(&u32, &str)>(|_, _| {});
  |           ^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `str`
  = help: the following other types implement trait `secs::query::SparseSetGetter<'a>`:
            &'a C
            &'a mut C
            Option<T>
  = note: required for `&str` to implement `secs::query::SparseSetGetter<'_>`

error[E0277]: `u32` cannot be used as a query component
  --> tests/ui/missing_ref.rs:10:11
   |
LL |     world.query::<(u32, &&str)>(|_, _| {});
   |           ^^^^^
   |
   = help: the trait `secs::query::SparseSetGetter<'_>` is not implemented for `u32`
   = note: only references and `Option`s of references can be components
   = help: the following other types implement trait `secs::query::SparseSetGetter<'a>`:
             &'a C
             &'a mut C
             Option<T>
   = note: required for `(u32, &&str)` to implement `secs::query::Query<'_>`

error[E0277]: `u32` cannot be the first element of a query
  --> tests/ui/missing_ref.rs:10:11
   |
LL |     world.query::<(u32, &&str)>(|_, _| {});
   |           ^^^^^
   |
   = help: the trait `secs::query::Always` is not implemented for `u32`
   = note: move another element to the front of the list
   = help: the following other types implement trait `secs::query::Always`:
             &T
             &mut T
   = note: required for `(u32, &&str)` to implement `secs::query::Query<'_>`

error[E0277]: `u32` cannot be used as a query component
  --> tests/ui/missing_ref.rs:10:19
   |
LL |     world.query::<(u32, &&str)>(|_, _| {});
   |           -----   ^^^^^^^^^^^^
   |           |
   |           required by a bound introduced by this call
   |
   = help: the trait `secs::query::SparseSetGetter<'_>` is not implemented for `u32`
   = note: only references and `Option`s of references can be components
   = help: the following other types implement trait `secs::query::SparseSetGetter<'a>`:
             &'a C
             &'a mut C
             Option<T>
   = note: required for `(u32, &&str)` to implement `secs::query::Query<'_>`
note: required by a bound in `secs::prelude::World::query`
  --> $DIR/src/world.rs
   |
LL |     pub fn query<'a, Q: Query<'a>>(
   |                         ^^^^^^^^^ required by this bound in `World::query`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
